css alignment fix

--- a/client/styles.css
+++ b/client/styles.css
@@ -8,7 +8,7 @@ body {
     width: 0;
     position: fixed;
     z-index: 1;
-    top: 120px;
+    top: 116px;
     left: 0;
     background-color: white;
     overflow-x: hidden;
@@ -25,9 +25,9 @@ body {
   #map {
     position: absolute;
 
-    top: 120px;
+    top: 104px;
     bottom: 40px;
-    height: 80%;
+    height: 83%;
     width: 99%;
     left: 0px;
     transition: 0.5s;
@@ -76,4 +76,3 @@ body {
       max-width: 400px;
       font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
   }
-  
